# DekuDealsAPI

./: .gitignore  README.md  deku.py  page.py  pyproject.toml  search.py  test.py
DekuDealsAPI/: __init__.py  page.py  search.py
